--- a/style.css
+++ b/style.css
@@ -17,8 +17,17 @@ h2, span.x, div#score, span.o {
     color: #ffffff;
 }
 #game-messages{
-
+    font-size:  2em;
+    margin-top: 1em;
     color: #ffffff;
+}
+
+#menu{
+    margin: 1em 0.5em 1em 0.5em;
+    padding: 1em;
+}
+#exit-game{
+    margin-top: 0.5em;
 }
 .container {
     margin: 0 auto;
